--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ a:last-of-type {
   padding-left: 15px;
   padding-right: 15px;
   margin-left: 15px;
-  border-color: royalblue;
+  border-color: #9d9d9d;
   text-transform: uppercase;
 }
 section {
